// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ap.map 1`] = `
Array [
  2,
  3,
  4,
  5,
  6,
  "6,7,8,9,10,11,12,13,14,151",
]
`;

exports[`ap.recursive.map 1`] = `
Array [
  2,
  3,
  4,
  5,
  6,
  Array [
    7,
    8,
    9,
    10,
    11,
    Array [
      12,
      13,
      14,
      15,
      16,
    ],
  ],
]
`;
